force-app/main/default/objects/Account/fields/crm_Conv_Converison_Heat__c.field-meta.xml
<CustomField>
    <fullName>crm_Conv_Converison_Heat__c</fullName>
    <label>Conversion Heat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heat A - June 2019</fullName>
                <label>Heat A - JUNI 2019</label>
            </value>
            <value>
                <fullName>Heat B - September 2019</fullName>
                <label>Heat B - SEPTEMBER  2019</label>
            </value>
            <value>
                <fullName>Heat C - OKTOBER 2019</fullName>
            </value>
            <value>
                <fullName>Heat D - NOVEMBER 2019</fullName>
            </value>
            <value>
                <fullName>Heat E - DESEMBER 2019</fullName>
            </value>
            <value>
                <fullName>Heat F - JANUAR 2020</fullName>
            </value>
            <value>
                <fullName>Heat G - FEBRUAR 2020</fullName>
            </value>
            <value>
                <fullName>Heat H - MARS 2020</fullName>
            </value>
            <value>
                <fullName>Heat I - APRIL 2020</fullName>
            </value>
            <value>
                <fullName>Heat J - MAI 2020</fullName>
            </value>
            <value>
                <fullName>Heat K - JUNI 2020</fullName>
            </value>
            <value>
                <fullName>Heat L - SEPTEMBER 2020</fullName>
            </value>
            <value>
                <fullName>Heat M - OKTOBER 2020</fullName>
            </value>
            <value>
                <fullName>Heat N - NOVEMBER 2020</fullName>
            </value>
            <value>
                <fullName>Heat O - DESEMBER 2020</fullName>
            </value>
            <value>
                <fullName>Heat P - JANUAR 2021</fullName>
            </value>
            <value>
                <fullName>Heat Q - FEBRUAR 2021</fullName>
            </value>
            <value>
                <fullName>Heat X - TBD</fullName>
            </value>
            <value>
                <fullName>Heat Y - No revenue or bankrupt</fullName>
            </value>
            <value>
                <fullName>SPN pilot A</fullName>
            </value>
            <value>
                <fullName>SPN pilot B</fullName>
            </value>
            <value>
                <fullName>Bulk conversion - Batch 01</fullName>
            </value>
            <value>
                <fullName>Bulk conversion - Batch 02</fullName>
            </value>
            <value>
                <fullName>Bulk conversion - Batch 03</fullName>
            </value>
            <value>
                <fullName>Bulk conversion - Batch 04</fullName>
            </value>
            <value>
                <fullName>Bulk conversion - Batch 05</fullName>
            </value>
            <value>
                <fullName>Bulk conversion - Batch 06</fullName>
            </value>
            <value>
                <fullName>Bulk conversion - Batch 07</fullName>
            </value>
            <value>
                <fullName>Bulk conversion - Batch 08</fullName>
            </value>
            <value>
                <fullName>Bulk conversion - Batch 09</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>