force-app/main/default/objects/Account/fields/crm_Conv_Converison_Heat_formula__c.field-meta.xml
<CustomField>
    <fullName>crm_Conv_Converison_Heat_formula__c</fullName>
    <formula>TEXT(Parent.crm_Conv_Converison_Heat__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion Heat - F</label>
    <type>Text</type>
</CustomField>