force-app/main/default/objects/Account/fields/crm_conv_Conversion_comment__c.field-meta.xml
<CustomField>
    <fullName>crm_conv_Conversion_comment__c</fullName>
    <label>Conversion comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>