force-app/main/default/objects/Account/fields/crm_Conv_Conversion_Process__c.field-meta.xml
<CustomField>
    <fullName>crm_Conv_Conversion_Process__c</fullName>
    <label>Conversion Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>