force-app/main/default/objects/Account/fields/crm_Conv_Conversion_Process_formula__c.field-meta.xml
<CustomField>
    <fullName>crm_Conv_Conversion_Process_formula__c</fullName>
    <formula>TEXT(Parent.crm_Conv_Conversion_Process__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion Process -F</label>
    <type>Text</type>
</CustomField>