force-app/main/default/objects/Account/fields/crm_conv_Count_Org_No_in_group__c.field-meta.xml
<CustomField>
    <fullName>crm_conv_Count_Org_No_in_group__c</fullName>
    <label>Count Org No in group</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>