force-app/main/default/objects/Account/fields/crm_Conv_Customer_Conversion_Group__c.field-meta.xml
<CustomField>
    <fullName>crm_Conv_Customer_Conversion_Group__c</fullName>
    <label>Customer Conversion Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kun pakke til hentested</fullName>
            </value>
            <value>
                <fullName>Kun pakke til bedrift</fullName>
            </value>
            <value>
                <fullName>Kun ekspress neste dag</fullName>
            </value>
            <value>
                <fullName>Kun stykk og parti</fullName>
            </value>
            <value>
                <fullName>Kun termo</fullName>
            </value>
            <value>
                <fullName>Kun internasjonalt</fullName>
            </value>
            <value>
                <fullName>Storst pa pakke til hentested</fullName>
                <label>Størst på pakke til hentested</label>
            </value>
            <value>
                <fullName>Storst pa pakke til bedrift</fullName>
                <label>Størst på pakke til bedrift</label>
            </value>
            <value>
                <fullName>Storst pa ekspress neste dag</fullName>
                <label>Størst på ekspress neste dag</label>
            </value>
            <value>
                <fullName>Storst pa Stykk og parti</fullName>
                <label>Størst på Stykk og parti</label>
            </value>
            <value>
                <fullName>Storst pa termo</fullName>
                <label>Størst på termo</label>
            </value>
            <value>
                <fullName>Storst pa internasjonal</fullName>
                <label>Størst på internasjonal</label>
            </value>
            <value>
                <fullName>Alt av pakker jevnt fordelt</fullName>
            </value>
            <value>
                <fullName>Alt av pakker og gods jevnt fordelt</fullName>
            </value>
            <value>
                <fullName>Alt av pakker, gods og internasjonal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>