force-app/main/default/objects/Account/fields/crm_conv_Customer_state__c.field-meta.xml
<CustomField>
    <fullName>crm_conv_Customer_state__c</fullName>
    <label>Customer state</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No agreement</fullName>
            </value>
            <value>
                <fullName>Standard agreement</fullName>
            </value>
            <value>
                <fullName>Customized agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>