force-app/main/default/objects/Account/fields/crm_Conv_Order_Channel__c.field-meta.xml
<CustomField>
    <fullName>crm_Conv_Order_Channel__c</fullName>
    <label>Order Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>