force-app/main/default/objects/Account/fields/crm_Conv_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>crm_Conv_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>