force-app/main/default/objects/Account/fields/crm_Conv_Start_Date_formula__c.field-meta.xml
<CustomField>
    <fullName>crm_Conv_Start_Date_formula__c</fullName>
    <formula>Parent.crm_Conv_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date -F</label>
    <type>Date</type>
</CustomField>