force-app/main/default/objects/Account/fields/crm_convert_Lead_Account_check__c.field-meta.xml
<CustomField>
    <fullName>crm_convert_Lead_Account_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>convert Lead Account check</label>
    <type>Checkbox</type>
</CustomField>