force-app/main/default/objects/Account/fields/crm_Count_of_Primary_Relation__c.field-meta.xml
<CustomField>
    <fullName>crm_Count_of_Primary_Relation__c</fullName>
    <label>Count of Primary Relation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>