force-app/main/default/objects/Account/fields/crm_Count_of_Relation_level_Accounts__c.field-meta.xml
<CustomField>
    <fullName>crm_Count_of_Relation_level_Accounts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count of Relation level customers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>