force-app/main/default/objects/Account/fields/crm_Count_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>crm_Count_Opportunity__c</fullName>
    <label>Count Opportunity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>