force-app/main/default/objects/Account/fields/crm_cov_ListOrg_no_in_group__c.field-meta.xml
<CustomField>
    <fullName>crm_cov_ListOrg_no_in_group__c</fullName>
    <label>ListOrg.no in group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>