force-app/main/default/objects/Account/fields/crm_Credit_Rating_Code__c.field-meta.xml
<CustomField>
    <fullName>crm_Credit_Rating_Code__c</fullName>
    <label>Credit Rating Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>