force-app/main/default/objects/Account/fields/crm_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>crm_Credit_Score__c</fullName>
    <label>Credit Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>