force-app/main/default/objects/Account/fields/crm_CREDITLIMIT__c.field-meta.xml
<CustomField>
    <fullName>crm_CREDITLIMIT__c</fullName>
    <label>CREDITLIMIT Not In Use</label>
    <length>10</length>
    <type>Text</type>
</CustomField>