force-app/main/default/objects/Account/fields/crm_CURRENCYCODE__c.field-meta.xml
<CustomField>
    <fullName>crm_CURRENCYCODE__c</fullName>
    <description>Custom - Felles Kundebilde dataelements</description>
    <label>CURRENCYCODE</label>
    <length>5</length>
    <type>Text</type>
</CustomField>