force-app/main/default/objects/Account/fields/crm_CURRENCYCODEDESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>crm_CURRENCYCODEDESCRIPTION__c</fullName>
    <label>CURRENCYCODEDESCRIPTION</label>
    <length>15</length>
    <type>Text</type>
</CustomField>