force-app/main/default/objects/Account/fields/crm_Customer_Blocked_Status__c.field-meta.xml
<CustomField>
    <fullName>crm_Customer_Blocked_Status__c</fullName>
    <inlineHelpText>N = Equals Not blocked
Y = Equals blocked
Reason for Y can be either of these:
- The company is deleted       
- Bankruptcy registered          
- Forced dissolution
- Bankruptcy/ Receivership               
- Deletion/ Striking Off</inlineHelpText>
    <label>Customer Blocked Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>