force-app/main/default/objects/Account/fields/crm_Customer_Conversion_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>crm_Customer_Conversion_Transaction_Id__c</fullName>
    <description>Stores the transaction Id created in the convert customer interface</description>
    <label>Customer Conversion Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>