force-app/main/default/objects/Account/fields/crm_customer_converted_date__c.field-meta.xml
<CustomField>
    <fullName>crm_customer_converted_date__c</fullName>
    <label>Customer Converted Date</label>
    <type>Date</type>
</CustomField>