force-app/main/default/objects/Account/fields/crm_Customer_EDI__c.field-meta.xml
<CustomField>
    <fullName>crm_Customer_EDI__c</fullName>
    <label>Customer EDI</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Axia Frakt</fullName>
            </value>
            <value>
                <fullName>Consignor</fullName>
            </value>
            <value>
                <fullName>MyBring</fullName>
            </value>
            <value>
                <fullName>Proteria</fullName>
            </value>
            <value>
                <fullName>Unifaun</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Logistra/Cargoniser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>