force-app/main/default/objects/Account/fields/crm_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>crm_Customer_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Customer number - same as the party number</description>
    <externalId>true</externalId>
    <label>Customer Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>