force-app/main/default/objects/Account/fields/crm_Customer_Portal_Contacts__c.field-meta.xml
<CustomField>
    <fullName>crm_Customer_Portal_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Portal Contacts</label>
    <type>Checkbox</type>
</CustomField>