force-app/main/default/objects/Account/fields/crm_Customer_Status_Role_1__c.field-meta.xml
<CustomField>
    <fullName>crm_Customer_Status_Role_1__c</fullName>
    <label>Customer Status/Role 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>