force-app/main/default/objects/Account/fields/crm_Customer_Status_Role_3__c.field-meta.xml
<CustomField>
    <fullName>crm_Customer_Status_Role_3__c</fullName>
    <label>Customer Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>