force-app/main/default/objects/Account/fields/crm_customer_type__c.field-meta.xml
<CustomField>
    <fullName>crm_customer_type__c</fullName>
    <formula>IF(
	AND( crm_Active_Relation_Account__c,  RecordType.DeveloperName = &apos;business_account&apos;),
	 $Label.Customer_Type_Sales_Customer, 
	IF( 
		AND( NOT( crm_Active_Relation_Account__c), RecordType.DeveloperName = &apos;business_account&apos;),
		$Label.Customer_Type_value,
		&apos;Other&apos;
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Type</label>
    <type>Text</type>
</CustomField>