force-app/main/default/objects/Account/fields/crm_Date_for_Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>crm_Date_for_Credit_Rating__c</fullName>
    <label>Date for Credit Rating</label>
    <length>15</length>
    <type>Text</type>
</CustomField>