force-app/main/default/objects/Account/fields/crm_Date_updated_external_company_data__c.field-meta.xml
<CustomField>
    <fullName>crm_Date_updated_external_company_data__c</fullName>
    <description>Custom - Felles Kundebilde dataelements</description>
    <label>Date updated (external company data)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>