force-app/main/default/objects/Account/fields/crm_Domestic_Ultimate_Company_Cntry_Dsc__c.field-meta.xml
<CustomField>
    <fullName>crm_Domestic_Ultimate_Company_Cntry_Dsc__c</fullName>
    <label>Domestic Ultimate Company Country Desc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>