force-app/main/default/objects/Account/fields/crm_Domestic_Ultimate_Company_Identifier__c.field-meta.xml
<CustomField>
    <fullName>crm_Domestic_Ultimate_Company_Identifier__c</fullName>
    <description>Custom - Felles Kundebilde dataelements</description>
    <label>Domestic Ultimate Company Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>