force-app/main/default/objects/Account/fields/crm_Domestic_Ultimate_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>crm_Domestic_Ultimate_Company_Name__c</fullName>
    <description>Custom - Felles Kundebilde dataelements</description>
    <label>Domestic Ultimate Company Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>