force-app/main/default/objects/Account/fields/crm_Domestic_ultimate_National_ID__c.field-meta.xml
<CustomField>
    <fullName>crm_Domestic_ultimate_National_ID__c</fullName>
    <label>Domestic ultimate National ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>