force-app/main/default/objects/Account/fields/crm_DUNS_nummer__c.field-meta.xml
<CustomField>
    <fullName>crm_DUNS_nummer__c</fullName>
    <label>DUNS nummer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>