force-app/main/default/objects/Account/fields/crm_Duplicate_Match__c.field-meta.xml
<CustomField>
    <fullName>crm_Duplicate_Match__c</fullName>
    <defaultValue>IF(
OR(
$RecordType.DeveloperName == &quot;crm_Prospect&quot;,
$RecordType.DeveloperName == &quot;crm_Party_level_Customer&quot;
),
&quot;Duplicate&quot;,
&quot;&quot;
)</defaultValue>
    <label>Duplicate Match</label>
    <length>25</length>
    <type>Text</type>
</CustomField>