force-app/main/default/objects/Account/fields/crm_e_commerce_KAM__c.field-meta.xml
<CustomField>
    <fullName>crm_e_commerce_KAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>e-commerce KAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>