force-app/main/default/objects/Account/fields/crm_EDI_API_status__c.field-meta.xml
<CustomField>
    <fullName>crm_EDI_API_status__c</fullName>
    <label>EDI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ikke oppdatert</fullName>
            </value>
            <value>
                <fullName>Oppdatert</fullName>
            </value>
            <value>
                <fullName>Tvetydig</fullName>
            </value>
            <value>
                <fullName>Ikke nok grunnlag</fullName>
            </value>
            <value>
                <fullName>Ikke relevant</fullName>
                <default>true</default>
                <label>Ikke relevant</label>
            </value>
            <value>
                <fullName>Ambiguous</fullName>
                <isActive>false</isActive>
                <label>Ambiguous</label>
            </value>
            <value>
                <fullName>Converted</fullName>
                <isActive>false</isActive>
                <label>Converted</label>
            </value>
            <value>
                <fullName>Ikke konvertert</fullName>
                <isActive>false</isActive>
                <label>Ikke konvertert</label>
            </value>
            <value>
                <fullName>Insufficient Data</fullName>
                <isActive>false</isActive>
                <label>Insufficient Data</label>
            </value>
            <value>
                <fullName>Konvertert</fullName>
                <isActive>false</isActive>
                <label>Konvertert</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Not Converted</fullName>
                <isActive>false</isActive>
                <label>Not Converted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>