force-app/main/default/objects/Account/fields/crm_EDI_Countries__c.field-meta.xml
<CustomField>
    <fullName>crm_EDI_Countries__c</fullName>
    <label>EDI Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>DK</fullName>
            </value>
            <value>
                <fullName>FI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>