force-app/main/default/objects/Account/fields/crm_EDI_Customer__c.field-meta.xml
<CustomField>
    <fullName>crm_EDI_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EDI Customer</label>
    <type>Checkbox</type>
</CustomField>