force-app/main/default/objects/Account/fields/crm_EDI_Customs_Clearence__c.field-meta.xml
<CustomField>
    <fullName>crm_EDI_Customs_Clearence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EDI Customs Clearence</label>
    <type>Checkbox</type>
</CustomField>