force-app/main/default/objects/Account/fields/crm_EDI_Sender_ID_and_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>crm_EDI_Sender_ID_and_Qualifier__c</fullName>
    <label>EDI Sender ID and Qualifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>