force-app/main/default/objects/Account/fields/crm_English_LOB_Code_2_description_NACE2__c.field-meta.xml
<CustomField>
    <fullName>crm_English_LOB_Code_2_description_NACE2__c</fullName>
    <description>Custom - Felles Kundebilde dataelements</description>
    <label>English LOB Code 2 description, NACE2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>