force-app/main/default/objects/Account/fields/crm_English_LOB_description_NACE__c.field-meta.xml
<CustomField>
    <fullName>crm_English_LOB_description_NACE__c</fullName>
    <description>Custom - Felles Kundebilde dataelements</description>
    <label>English LOB description, NACE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>