force-app/main/default/objects/Account/fields/crm_Equipment_type_Code_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>crm_Equipment_type_Code_Qualifier__c</fullName>
    <label>Equipment type Code Qualifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>