force-app/main/default/objects/Account/fields/crm_Field_for_other_interests__c.field-meta.xml
<CustomField>
    <fullName>crm_Field_for_other_interests__c</fullName>
    <description>Replaces interest code functionality in Caesar - to be reviewed / challenge during review</description>
    <label>Field for other interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test 1</fullName>
            </value>
            <value>
                <fullName>Test 2</fullName>
            </value>
            <value>
                <fullName>Test 3</fullName>
            </value>
            <value>
                <fullName>Test 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>