force-app/main/default/objects/Account/fields/crm_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>crm_Fiscal_Year__c</fullName>
    <description>Custom - Felles Kundebilde dataelements</description>
    <label>Fiscal Year</label>
    <length>15</length>
    <type>Text</type>
</CustomField>