force-app/main/default/objects/Account/fields/crm_Global_Ultimate_Cmpny_Identifier_Owr__c.field-meta.xml
<CustomField>
    <fullName>crm_Global_Ultimate_Cmpny_Identifier_Owr__c</fullName>
    <label>Global Ultimate Company Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>