force-app/main/default/objects/Account/fields/crm_Global_Ultimate_Company_Identifier__c.field-meta.xml
<CustomField>
    <fullName>crm_Global_Ultimate_Company_Identifier__c</fullName>
    <label>Global Ultimate Company Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>