force-app/main/default/objects/Account/fields/crm_Global_Ultimate_Country_Description__c.field-meta.xml
<CustomField>
    <fullName>crm_Global_Ultimate_Country_Description__c</fullName>
    <label>Global Ultimate Country Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>