force-app/main/default/objects/Account/fields/crm_Group_KAM__c.field-meta.xml
<CustomField>
    <fullName>crm_Group_KAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group KAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>