force-app/main/default/objects/Account/fields/crm_Headquarter_Country_Description__c.field-meta.xml
<CustomField>
    <fullName>crm_Headquarter_Country_Description__c</fullName>
    <description>Custom - Felles Kundebilde dataelements</description>
    <label>Headquarter Country Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>