force-app/main/default/objects/Account/fields/crm_Headquarter_Countrycode__c.field-meta.xml
<CustomField>
    <fullName>crm_Headquarter_Countrycode__c</fullName>
    <label>Headquarter Countrycode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>