force-app/main/default/objects/Account/fields/crm_Headquarter_Identifier_for_ext_comp__c.field-meta.xml
<CustomField>
    <fullName>crm_Headquarter_Identifier_for_ext_comp__c</fullName>
    <label>Headquarter Identifier for ext comp data</label>
    <length>50</length>
    <type>Text</type>
</CustomField>