force-app/main/default/objects/Account/fields/crm_Headquarter_Name__c.field-meta.xml
<CustomField>
    <fullName>crm_Headquarter_Name__c</fullName>
    <label>Headquarter Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>