force-app/main/default/objects/Account/fields/crm_Headquarter_National_ID__c.field-meta.xml
<CustomField>
    <fullName>crm_Headquarter_National_ID__c</fullName>
    <description>Custom - Felles Kundebilde dataelements</description>
    <label>Headquarter National ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>