force-app/main/default/objects/Account/fields/crm_Internal_Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>crm_Internal_Credit_Rating__c</fullName>
    <description>Custom - Felles Kundebilde dataelements</description>
    <label>Internal Credit Rating</label>
    <length>10</length>
    <type>Text</type>
</CustomField>