force-app/main/default/objects/Account/fields/crm_Invoice_channel__c.field-meta.xml
<CustomField>
    <fullName>crm_Invoice_channel__c</fullName>
    <label>Invoice channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>letter</fullName>
            </value>
            <value>
                <fullName>e-mail</fullName>
            </value>
            <value>
                <fullName>EDI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>