force-app/main/default/objects/Account/fields/crm_Invoice_email_Address__c.field-meta.xml
<CustomField>
    <fullName>crm_Invoice_email_Address__c</fullName>
    <label>Invoice e-mail Address</label>
    <type>Email</type>
</CustomField>