force-app/main/default/objects/Account/fields/crm_Invoice_email_Address_txt__c.field-meta.xml
<CustomField>
    <fullName>crm_Invoice_email_Address_txt__c</fullName>
    <label>Invoice email Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>