force-app/main/default/objects/Account/fields/crm_Invoice_frequency__c.field-meta.xml
<CustomField>
    <fullName>crm_Invoice_frequency__c</fullName>
    <label>Invoice frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>