force-app/main/default/objects/Account/fields/crm_Invoice_notes__c.field-meta.xml
<CustomField>
    <fullName>crm_Invoice_notes__c</fullName>
    <label>Invoice notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>