force-app/main/default/objects/Account/fields/crm_Invoice_reference__c.field-meta.xml
<CustomField>
    <fullName>crm_Invoice_reference__c</fullName>
    <label>Invoice reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>