force-app/main/default/objects/Account/fields/crm_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>crm_Lead_Id__c</fullName>
    <label>Lead Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>