force-app/main/default/objects/Account/fields/crm_Lead_mapped_field__c.field-meta.xml
<CustomField>
    <fullName>crm_Lead_mapped_field__c</fullName>
    <label>Lead mapped field</label>
    <length>1</length>
    <type>Text</type>
</CustomField>