force-app/main/default/objects/Account/fields/crm_LOB_Code_2_NACE2__c.field-meta.xml
<CustomField>
    <fullName>crm_LOB_Code_2_NACE2__c</fullName>
    <description>Custom - Felles Kundebilde dataelements</description>
    <label>LOB Code 2, NACE2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>