force-app/main/default/objects/Account/fields/crm_Local_LOB_Code_2_description_NACE2__c.field-meta.xml
<CustomField>
    <fullName>crm_Local_LOB_Code_2_description_NACE2__c</fullName>
    <label>Local LOB Code 2 description, NACE2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>